@@ -1,0 +1,10 @@
+[Desktop Entry]
+Encoding=UTF-8
+Version=1.0
+Type=Application
+_Name=Helper application for imsettings
+_Comment=Helper application that delivers GTK+ immodule name between GConf and Xfconf
+Hidden=true
+OnlyShowIn=XFCE;
+Exec=imsettings-xfce-helper
+Terminal=false
